--- a/login-page/styles.css
+++ b/login-page/styles.css
@@ -1,5 +1,7 @@
-body {
-	background-color: #111;
+html {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 	background-image: url('images/background-pic.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -16,61 +18,62 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-/*	margin: 20px;*/
+	border-radius: 5px;
 }
 
 input {
 	height: 30px;
 	width: 100%;
 	border: none;
-	border-bottom: 1px solid;
-	font-size: 15px;
-	font-style: poppins;
+	border-bottom: 1px solid #6363d1;
 	display: inline-block;
-
+	margin-bottom: 25px;
 }
-.top-icon {
-	width: 250px;
-	padding-top: 1px;
-}
-
-i {
-	padding-bottom: -10px;
-}
-
-.submit-ico i {
-/*	background-color: green;*/
+input::placeholder {
 	position: absolute;
-	left: 150px;
+	color: #000080;
+	left: 10px;
+	font-size: 16px;
+}
+
+label {
+	font-size: 15px;
+	font-family: serif;
+	color: #000080;
+	padding-bottom: 35px;
+}
+.top-i {
+	width: 150px;
+	padding-left: 70px;
+	padding-top: -10px;
+	margin-bottom: 25px;
+	margin-top: 0px;
+}
+
+button {
+	background-color: #66B032;
+	border: none;
+	border-bottom: 2px solid;
+	border-bottom-color: #000018;
+	width: 100%;
+	height: 40px;
+}
+.submit-ico button {
 	font-size: 20px;
-	line-height: 30px;
-	display: flex;
-	justify-content: center;
-	width: 10%;
+	color: #000080
 }
-
-span input{
-	background-color: green;
-}
-
 ul {
 	list-style-type: none;
 	padding: 0;
-	margin: 0 0 40px 0;
+	width: 100%;
+	color: #000080;
+	font-family: 'Jost', sans-serif;
+}
+ul > li[class="signup"] {
+	float: right;
 }
 li {
-	display: block;
-	font-size: 20px;
+	font-size: 15px;
 	float: left;
-	padding: 20px;
-	text-align: center;
-	transition: 0.5s ease;
-}
-.icon {
-	position: absolute;
-	left: 25px;
-	font-size: 20px;
-	height: 100%;
-	display: flex;
-	justify-content: center;
+	font-family: 'Jost', sans-serif;
 }
